miatoll: Configure default light sensor type
Fixes adaptive brightness after r35 merge

Change-Id: Iaa3839b0f56bb44ac89f322b2d10da16b4e861a5

--- a/overlay/MiatollFrameworks/res/values/config.xml
+++ b/overlay/MiatollFrameworks/res/values/config.xml
@@ -562,4 +562,7 @@
     <!-- The restoring is handled by modem if it is true-->
     <bool name="skip_restoring_network_selection">true</bool>
 
+    <!-- Auto-brightness sensor type string -->
+    <string name="config_displayLightSensorType">"android.sensor.light"</string>
+
 </resources>
